# interferometer

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
interferometer/: __init__.py  main.py
interferometer/tests/: __init__.py  test.py
notebooks/: demo.ipynb
notebooks/.ipynb_checkpoints/: demo-checkpoint.ipynb  examples-checkpoint.ipynb
tests/: test_interferometer.py
